examples/errors/assign_result_of_proc.alan
main(): proc
x: int;
    foo(): proc {

    }
{
    x = foo();
}